<resources>
    <string name="app_name">MyBucketList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="emailHint">Email</string>
    <string name="pwdHint">Password</string>
    <string name="loginbtnTxt">Login</string>
    <string name="signupTxt">Signup Now ?</string>
    <string name="alredayLoginTxt">Already a member ? <a href="">Login Now</a></string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="mobileNo">Mobile Number</string>
    <string name="confirmPwd">Confirm Password</string>
    <string name="signbtnTxt">SIGNUP</string>
    <string name="additem">Add Bucket List Item</string>
    <string name="titleTxt">New Bucket List item</string>
    <string name="submitbtnTxt">Submit</string>
    <string name="publishTxt">Publish to Inspirations</string>
    <string name="decriptionTxt">Description</string>
    <string name="catTxt">Category</string>
    <string name="facebook_app_id">100</string>
    <string name="editTxt">Edit</string>
    <string name="sortTxt">Sort</string>
    <string name="achivedTxt">Achieved</string>
    <string name="achiveddateTxt">Achieved</string>
    <string name="firstCard">First Bucket Title</string>
    <string name="firstCardSub">First Bucket item Subtitle</string>
    <string name="targetdateTxt">Target :</string>
    <string name="targetdateValueTxt">March 12, 2018</string>
    <string name="statusTxt">Status</string>
    <string name="postDateTxt">1</string>
    <string name="postDayTxt">Day</string>
    <string name="postDayAgoTxt">Ago</string>
    <string name="postDescription">Sample Description</string>
    <string name="subTitleTxt">Subtitle</string>
    <string name="saveTxt">Save</string>
    <string name="targetdateETxt">Due Date</string>
    <string name="address">Location</string>
    <string name="postTitle">Post Title</string>
    <string name="txt_forgetpassword">Please Enter Your Email Address, Will Send You A Verification Link To Reset Your Password.</string>
    <string name="inspi">inspirations</string>
    <string name="uploadtxt">Add Bucket Image</string>
    <string name="categoryValueTxt">All</string>
    <string name="targetdateTxtis">Due Date :</string>
    <string name="txt_filter">Submit</string>
    <string name="Lat">Latitude :</string>
    <string name="latis">0.0</string>
    <string name="lon">Longitude :</string>
    <string name="longIs">0.0</string>
    <string name="addressHint">Your Address is</string>
    <string name="latValue">0.0</string>
    <string name="lonValue">0.0</string>
</resources>
