<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="5dp"
    app:cardCornerRadius="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <FrameLayout
            android:id="@+id/framlayoutAdd"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_pin"
                android:layout_gravity="center"
                />

            <TextView

                android:id="@+id/pinAddressTV"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:hint="@string/addressHint"
                android:paddingRight="5dp"
                android:paddingTop="7dp"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_marginTop="62dp"
                android:id="@+id/latitudeLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:id="@+id/latTxt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:hint="@string/Lat"
                    android:textAlignment="center"
                    android:textColorHint="@color/textColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/latTxtvalue_map"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/latValue"
                    android:paddingLeft="5dp"
                    android:textColorHint="@color/textColor"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/longitudeLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="78dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/lonTxt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:hint="@string/lon"
                    android:textAlignment="center"
                    android:textColorHint="@color/textColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/lonTxtvalue_map"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/lonValue"
                    android:paddingLeft="5dp"
                    android:textColorHint="@color/textColor"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/getLocationButton"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/firstColor"
                android:text="@string/submitbtnTxt"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:visibility="visible" />
        </FrameLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>