<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_margin="26dp"
        android:visibility="visible"
        app:cardElevation="10dp"
        card_view:cardCornerRadius="6dp"
        card_view:contentPadding="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="6dp">


            <TextView
                android:id="@+id/latitudeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:inputType="textCapCharacters"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/Lat"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/latitudeTxtValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_toRightOf="@+id/logitudeTxt"
                android:inputType="textCapCharacters"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:text="@string/latis"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/logitudeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/latitudeTxt"
                android:layout_marginTop="3dp"
                android:inputType="text"
                android:paddingLeft="5dp"
                android:text="@string/lon"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/logitudeTxtValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/latitudeTxt"
                android:layout_marginTop="3dp"
                android:layout_toRightOf="@+id/logitudeTxt"
                android:inputType="textCapCharacters"
                android:paddingLeft="5dp"
                android:text="@string/longIs"
                android:textColor="@color/textColor" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>