<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/SingleCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:elevation="7dp"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp">

        <ImageView
            android:visibility="visible"
            android:id="@+id/itemImg"
            android:layout_width="0dp"
            android:layout_height="105dp"
            android:scaleType="fitXY"
            android:src="@drawable/rockclimbingh" />

        <TextView
            android:id="@+id/itemTitle"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/itemImg"
            android:maxLines="2"
            android:paddingLeft="10dp"

            android:singleLine="false"
            android:text="@string/firstCard"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true">
            <CheckBox
                android:id="@+id/achivedCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_marginLeft="15dp"/>
            <ImageView
                android:id="@+id/image_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:visibility="visible"
                android:src="@drawable/ic_check_box_black_24dp"/>
        </FrameLayout>


        <TextView
            android:visibility="gone"
            android:id="@+id/item_sub_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemTitle"
            android:layout_toRightOf="@+id/itemImg"
            android:paddingLeft="10dp"
            android:text="@string/firstCardSub"
            android:textColor="#000"
            android:textSize="10dp" />

        <LinearLayout
            android:id="@+id/latitudeLIneartxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_sub_Title"
            android:layout_toRightOf="@+id/itemImg"
            android:weightSum="2">

            <TextView
                android:id="@+id/latTxtSingleitem"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:singleLine="true"
                android:text="@string/Lat"
                android:textColor="@color/textColor"
                android:textSize="0sp" />

            <TextView
                android:id="@+id/latTxtvalueSingleitem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="0"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:text="@string/latis"
                android:textColor="@color/textColor"
                android:textSize="0sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/longitudeLIneartxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/latitudeLIneartxt"
            android:layout_toRightOf="@+id/itemImg"
            android:weightSum="2">

            <TextView
                android:id="@+id/longTxtvalueSingleitem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:text="@string/lon"
                android:textColor="@color/textColor"
                android:textSize="0sp" />

            <TextView
                android:id="@+id/lonTxtvalueSingleitem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:text="@string/longIs"
                android:textColor="@color/textColor"
                android:textSize="0sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/item_target_dateTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/longitudeLIneartxt"
            android:layout_toRightOf="@+id/itemImg"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:text="@string/targetdateTxtis"
            android:textColor="@color/firstColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/item_target_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/longitudeLIneartxt"
            android:layout_toRightOf="@+id/item_target_dateTxt"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:text="@string/firstCard"
            android:textColor="@color/firstColor"
            android:textSize="18sp" />
    </RelativeLayout>

</android.support.v7.widget.CardView>